--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="Styles/style.css">
 </head>
 <body>
-    
+    <div>
+        <h3>Simple Website</h3>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ea placeat veniam eaque eos delectus. Molestias corporis sint at? Culpa non rem quaerat, voluptatem quia commodi voluptatum incidunt molestias provident!</P>
+    </div>
 </body>
 </html>
