--- a/index.html
+++ b/index.html
@@ -11,5 +11,13 @@
         <h3>Simple Website</h3>
         <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ea placeat veniam eaque eos delectus. Molestias corporis sint at? Culpa non rem quaerat, voluptatem quia commodi voluptatum incidunt molestias provident!</P>
     </div>
+    <div>
+        <h3>Simple Website</h3>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ea placeat veniam eaque eos delectus. Molestias corporis sint at? Culpa non rem quaerat, voluptatem quia commodi voluptatum incidunt molestias provident!</P>
+    </div>
+    <div>
+        <h3>Simple Website</h3>
+        <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore ea placeat veniam eaque eos delectus. Molestias corporis sint at? Culpa non rem quaerat, voluptatem quia commodi voluptatum incidunt molestias provident!</P>
+    </div>
 </body>
 </html>
